overflow on pictures and title in the features section are fixed

--- a/src/styles/blocks/for.scss
+++ b/src/styles/blocks/for.scss
@@ -166,7 +166,7 @@
     object-position: center;
 
     cursor: zoom-in;
-    @include interactZoom(0.5s, 115%);
+    @include interactZoom(0.5s, 110%);
 
     @include onTablet {
       display: block;
