--- a/src/styles/blocks/materials.scss
+++ b/src/styles/blocks/materials.scss
@@ -24,7 +24,7 @@
 
       padding-left: 135px;
 
-      font-size: 139px;
+      font-size: 136px;
       line-height: 167px;
       letter-spacing: 0.12em;
     }
