--- a/src/styles/blocks/photo.scss
+++ b/src/styles/blocks/photo.scss
@@ -5,7 +5,7 @@
 
     object-fit: cover;
     object-position: center;
-    @include interactZoom(0.5s, 130%);
+    @include interactZoom(0.5s, 110%);
   }
 
   &__container {
@@ -33,7 +33,7 @@
     overflow: hidden;
     cursor: zoom-in;
 
-    @include interactZoom(0.5s, 115%);
+    @include interactZoom(0.5s, 110%);
 
     @include onTablet {
       width: 220px;
